added db and basic chat app implementation done

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div id="from_server">     
 
     </div> -->
-    <h1>Chatting ... </h1>
+    <h1>Chatting ... with <%= name %> </h1>
     <input type="text" name="" id="chat_box">
     <button id="send">Send</button>
     <ul id="msg_list"></ul>
